--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -22,6 +22,7 @@
 }
 
 .places article {
+    cursor: pointer;
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
     display: inline-block;
