--- a/web_dynamic/templates/place_detail.html
+++ b/web_dynamic/templates/place_detail.html
@@ -34,5 +34,8 @@
                 </div>            
             </div>
     </div>
-</body>
+    <footer>
+      <p>Holberton School</p>
+    </footer>
+  </body>
 </html>
