--- a/web_dynamic/templates/place_detail.html
+++ b/web_dynamic/templates/place_detail.html
@@ -30,7 +30,7 @@
                 <div><strong>Number of bathrooms:</strong> {{ place.number_bathrooms }}</div>
                 <div><strong>Location:</strong> {{ place.city.name }}, {{ place.city.state.name }}</div>
                 <div class="reservation-button">
-                  <button onclick="reserve()">Book Now</button>
+                  <button  onclick="window.location.href='/login'">Book Now</button>
                 </div>            
             </div>
     </div>
